# subd

./: .gitignore  Cargo.toml  LICENSE
examples/: benchmark_matrix_pow.rs  benchmark_multi_prod.rs  bspline_basis_plot.rs  bspline_diffusion_reaction_dir_square.rs  bspline_diffusion_reaction_neu_square.rs  bspline_poisson_dir_pentagon.m  bspline_poisson_dir_square.rs  catmull_clark_basis_plot.rs  catmull_clark_diffusion_reaction_dir_pentagon.rs  catmull_clark_diffusion_reaction_dir_square.rs  catmull_clark_diffusion_reaction_neu_square.rs  catmull_clark_poisson_dir_axi_cylinder.rs  catmull_clark_poisson_dir_pentagon.rs  catmull_clark_poisson_dir_square.rs  catmull_clark_poisson_neu_square.rs  catmull_clark_subd.rs  error_plot.m  lin_subd.rs  parse_geopdes.rs  parse_gmsh.rs  pl_diffusion_reaction_neu_square.rs  pl_poisson_dir_pentagon.rs  pl_poisson_dir_square.rs  plot_bspline_basis.rs  plot_subd_quadrature.rs  plot_subd_rings.rs  subd_0_form_matrix.rs  subd_0_form_matrix_pl.rs  subd_1_form_matrix.rs  subd_rectangle.rs
src/: basis.rs  bspline.rs  cells.rs  diffgeo.rs  element.rs  error.rs  index.rs  io.rs  knots.rs  lib.rs  mesh.rs  operator.rs  plot.rs  quadrature.rs  space.rs  subd.rs
src/basis/: cart_prod.rs  error.rs  eval.rs  global.rs  grad.rs  lin_combination.rs  local.rs  space.rs  tensor_prod.rs  traits.rs
src/bspline/: basis.rs  basis_transform.rs  cart_prod.rs  control_points.rs  cubic.rs  de_boor.rs  de_boor_span.rs  global_basis.rs  grad.rs  local_basis.rs  mod.rs  multi_spline_basis.rs  multivariate_spline_basis.rs  (+8 more)
tests/: operator.rs  tests.rs
(+155 files in other folders)
