[package]
name = "subd"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = "0.2.19"
iter_num_tools = "0.7.1"
itertools = "0.14.0"
nalgebra = { version = "0.34.0", features = ["rand", "sparse"] }
nalgebra-sparse = "0.11.0"
plotters = "0.3.7"
plotly = "0.13.3"
gauss-quad = "0.2.2"
approx = "0.5.1"
rand = "0.9.1"
csv = "1.3.1"
numeric_literals = "0.2.0"